<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

    <android.support.v7.widget.Toolbar
        android:id="@+id/harmonictoolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        android:theme="@style/StyleToolBar"
        app:titleTextColor="@color/black">

    </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:layout_marginBottom="30dp">


            <TextView
                android:id="@+id/hrmonic_voicetype"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:padding="6dp"
                android:layout_gravity="left"
                android:textAlignment="gravity"
                android:text="@string/harmonic_voice_type"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>
            <TextView
                android:id="@+id/hrmonic_soprano"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="22dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:padding="6dp"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:textAlignment="gravity"
                android:text="1. Soprano"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/hrmonic_soprano2"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:padding="6dp"
                android:layout_gravity="left"
                android:textAlignment="gravity"
                android:text="@string/harmonic_soprano"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>
            <TextView
                android:id="@+id/hrmonic_alto"
                android:layout_height="wrap_content"
                android:textSize="22dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:padding="6dp"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:textAlignment="gravity"
                android:text="2. Alto"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/hrmonic_alto2"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:padding="6dp"
                android:layout_gravity="left"
                android:textAlignment="gravity"
                android:text="@string/harmonic_alto"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>
            <TextView
            android:id="@+id/hrmonic_tenor"
            android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
            android:textSize="22dp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:padding="6dp"
            android:textStyle="bold"
            android:layout_gravity="left"
            android:textAlignment="gravity"
            android:text="3. Tenor"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/hrmonic_tenor2"
                android:fontFamily="sans-serif-condensed"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:padding="6dp"
                android:layout_gravity="left"
                android:textAlignment="gravity"
                android:text="@string/harmonic_tenor"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>
            <TextView
                android:id="@+id/hrmonic_bass"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="22dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:padding="6dp"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:textAlignment="gravity"
                android:text="4. Bass"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/hrmonic_bass2"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:padding="6dp"
                android:layout_gravity="left"
                android:textAlignment="gravity"
                android:text="@string/harmonic_bass"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>