<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/sheetmusictoolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            android:theme="@style/StyleToolBar"
            app:titleTextColor="@color/black">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:id="@+id/sheet_music_how"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed"
        android:padding="6dp"
        android:text="1. How to read Sheet Music"
        android:textAlignment="gravity"
        android:textColor="@color/black"
        android:textSize="22dp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/sheet_music1"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:padding="6dp"
                android:layout_gravity="left"
                android:textAlignment="gravity"
                android:text="@string/sheet_music_how"
                android:layout_marginTop="9dp"/>
            <TextView
                android:id="@+id/sheet_music_staff"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="22dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:padding="6dp"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:textAlignment="gravity"
                android:text="2. Music Staff"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:id="@+id/sheet_music_staff2"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:padding="6dp"
                android:layout_gravity="left"
                android:textAlignment="gravity"
                android:text="@string/sheet_music_staff"
                android:layout_marginTop="9dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="218dp"
                    android:layout_gravity="center"
                    android:src="@drawable/staff" />

            </FrameLayout>

            <TextView
                android:id="@+id/sheet_music_staff3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="sans-serif-condensed"
                android:padding="6dp"
                android:text="@string/sheet_music_staff2"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/sheet_music_treble"
                android:layout_height="wrap_content"
                android:textSize="22dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:padding="6dp"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:textAlignment="gravity"
                android:text="3. Treble Clef"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/sheet_music_treble2"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:padding="6dp"
                android:layout_gravity="left"
                android:textAlignment="gravity"
                android:text="@string/sheet_music_treble"
                android:layout_marginTop="9dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:src="@drawable/treble_clef" />
            </FrameLayout>

            <TextView
                android:id="@+id/sheet_music_barline"
                android:layout_height="wrap_content"
                android:textSize="22dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:padding="6dp"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:textAlignment="gravity"
                android:text="4. Barline"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/sheet_music_barline2"
                android:layout_width="wrap_content"
                android:layout_height="280dp"
                android:layout_gravity="left"
                android:layout_marginTop="9dp"
                android:fontFamily="sans-serif-condensed"
                android:padding="6dp"
                android:text="@string/sheet_music_barline"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/sheet_music_notes"
                android:layout_height="wrap_content"
                android:textSize="22dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:padding="6dp"
                android:textStyle="bold"
                android:layout_gravity="left"
                android:textAlignment="gravity"
                android:text="5. Notes"
                android:layout_marginLeft="9dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="207dp"
                    android:layout_gravity="center"
                    android:src="@drawable/notes" />
            </FrameLayout>

            <TextView
                android:id="@+id/sheet_music_notes2"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@color/black"
                android:layout_width="wrap_content"
                android:padding="6dp"
                android:layout_gravity="left"
                android:textAlignment="gravity"
                android:text="@string/sheet_music_notes"
                android:layout_marginTop="9dp"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="139dp"
                    android:layout_gravity="center"
                    android:src="@drawable/note_vlues" />
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="112dp"
                    android:layout_gravity="center"
                    android:src="@drawable/note_vlues2" />
            </FrameLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
